# data-science-pipeline

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  ROADMAP.md  pyproject.toml  run_pipeline.ps1
.github/workflows/: ci.yml
data/processed/: sales.parquet
data/raw/: sales.csv
src/data/: pipeline.py
src/jobs/: run_pipeline.py
src/models/: train.py
src/utils/: logger.py  retry.py  validation.py
tests/: test_transform.py  test_validation.py
