[project]
name = "ds-project"
version = "0.1.0"
description = "Data Science project"
authors = [
    {name = "Andrea Di Francesco"}
]
requires-python = ">=3.11"
dependencies = [
    "polars (>=1.39.3,<2.0.0)",
    "duckdb (>=1.5.0,<2.0.0)",
    "pyarrow (>=23.0.1,<24.0.0)",
    "pandas (>=3.0.1,<4.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "lightgbm (>=4.6.0,<5.0.0)",
    "shap (>=0.51.0,<0.52.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "black (>=26.3.1,<27.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "pre-commit (>=4.5.1,<5.0.0)"
]
